# nat-learn

./: README.md  setup.txt
01-chat-completion-openai/: config.yml  output.txt
02-net-serve-docs-swagger/: setup.txt  test.py
03-nat-tracing/: config2.yml  setup.txt
04-react-wikipedia/: config3.yml  output.txt  setup.txt
05-functions/: output.txt  setup.txt
05-functions/getjoke/get_joke/: pyproject.toml
05-functions/getjoke/get_joke/configs/: config.yml
05-functions/getjoke/get_joke/src/get_joke/: get_joke.py  register.py
05-functions/getjoke/get_joke/src/get_joke.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
06-evaluation/: config.yml  eval_dataset.json  output.txt
06-evaluation/eval_results/: answer_accuracy_output.json  config_effective.yml  config_metadata.json  workflow_output.json
