[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "get_joke"
version = "0.1.0"
dependencies = [
  "nvidia-nat[langchain]~=1.8",
]
requires-python = ">=3.11,<3.14"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]



[project.entry-points.'nat.components']
get_joke = "get_joke.register"
